# F1-Fantasy-DSA-project

./: CMakeLists.txt  README.md  build.ps1
data/: constructors.csv  drivers.csv  dsad  leaderboard.txt  users.csv
src/Core/: Constructors.cpp  Constructors.h  Driver.cpp  Driver.h  Team.cpp  Team.h  User.cpp  User.h
src/Game systems/: Leaderboard.cpp  Leaderboard.h  RaceSimulator.cpp  RaceSimulator.h  main.cpp
src/dsa/: AVLTree.cpp  AVLTree.h  Sorting.cpp  Sorting.h  Trie.cpp  Trie.h
